# photo-meta-data-ai

./: .gitignore  AGENTS.md  AI_ANALYZER_USAGE.md  COLAB_USAGE.md  Mining_Photo_MetaData.ipynb  PARALLEL_CATEGORIES_USAGE.md  PARALLEL_CATEGORY_PROCESSOR_USAGE.md  PARCEL_PROCESSOR_USAGE.md  PhotoMedtaData.ipynb  QUALITY_ASSESSMENT_ONLY_USAGE.md  QUALITY_ASSESSMENT_USAGE.md  README.md  SETUP_GUIDE.md  ai-analyzer-fast  ai-analyzer-parallel  colab_ai_analyzer.py  colab_code.py  colab_code_clean.py  colab_description.md  colab_description_short.md  colab_folder_setup.py  colab_folder_setup_clean.py  colab_summarize_property.py  copy_property_files.py  create_missing_property_files.py  create_property_files.py  debug_bucket.py  env.example  fix-submit-local  fix_and_submit_local.py  fix_relationship_references.py  folder-setup  get_layout_schema.py  get_property_cid_and_download.py  get_property_from_ipfs.py  increase_timeouts.py  install.sh  pyproject.toml  quality-assessment  requirements.txt  (+15 more)
src/: __init__.py  ai_analyzer.py  ai_image_analysis_colab_fast.py  ai_image_analysis_optimized_multi_thread.py  ai_image_analysis_optimized_multi_thread_no_layout_file_relationships.py  ai_image_analysis_with_quality_duplicate_detection.py  bucket_manager.py  colab_folder_setup.py  copy_all_data_for_submission.py  copy_all_files_from_zip.py  copy_property_files.py  copy_property_files_from_zip.py  fix_and_submit_local.py  fix_schema_validation.py  folder_setup.py  folder_setup_updated.py  image_converter.py  ipfs_traverser.py  parcel_processor.py  photo_data_processor.py  rek.py  (+8 more)
(+772 files in other folders)
