[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-metadata-ai"
version = "1.0.0"
description = "AWS Rekognition photo categorization tool for real estate images"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Photo Metadata AI", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
photo-categorizer = "src.rekognition:main"
ai-analyzer = "src.ai_image_analysis_optimized_multi_thread:main"
bucket-manager = "src.bucket_manager:main"
colab-folder-setup = "src.colab_folder_setup:main"

[project.urls]
Homepage = "https://github.com/yourusername/photo-meta-data-ai"
Repository = "https://github.com/yourusername/photo-meta-data-ai"
Issues = "https://github.com/yourusername/photo-meta-data-ai/issues" 